# languagetool-lsp

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
tests/: README.md  debug_sentence.md  debug_test.md  test.md  test_auto_detection.md  test_deutsche_texte.md  test_final.md  test_multiple_errors_same_line.md  test_multiple_langs.md  test_performance.md  test_plain_text_lang.md  test_smart_code_actions.md  test_spell_check.md
