[package]
name = "languagetool-lsp"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Language Server Protocol implementation providing grammar and spell checking using LanguageTool"
repository = "https://github.com/Dronakurl/languagetool-lsp"
readme = "README.md"
keywords = ["lsp", "spell-check", "grammar-check", "languagetool", "language-server"]
categories = ["development-tools", "text-processing"]

[lib]
name = "languagetool_lsp"
path = "src/lib.rs"

[[bin]]
name = "languagetool-lsp"
path = "src/main.rs"

[dependencies]
lsp-server = "0.7"
lsp-types = "0.97"
languagetool-rust = { version = "3.0", default-features = false, features = ["native-tls"] }
regex = "1.11"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.42", features = ["rt-multi-thread", "macros"] }
async-trait = "0.1"

[features]
default = []
